# host-grammar

./: .gitignore  Cargo.toml  README.md  host-grammar.allium  host-grammar.obligations
.github/workflows/: allium.yml  host-prove.yml  specula.yml  test.yml
spec/: ChunkBounds.tla  ParallelScan.cfg  ParallelScan.obligations  ParallelScan.tla  ParallelScanSymbolic.tla
src/: lib.rs  tells.rs
tests/: prose_properties.proptest-regressions  prose_properties.rs
