[package]
name = "host-grammar"
version = "0.2.0"
edition = "2021"
description = "Shared rules for valid agentic-host names and numbers — the grammar both the no-phase checker and the host-lifecycle generator defer to."
license = "Unlicense"

[dependencies]
pulldown-cmark = "0.13.4"
unicode-segmentation = "1.13.3"

[dev-dependencies]
proptest = "1.11.0"
